# visual-studio-solution-explorer

./: .gitignore  CMakeLists.txt  README.md  SLN-format.md  TODO  vs-solution-explorer.pro
tests/: CMakeLists.txt  LICENSES.md  RecentValuesTest.cpp  StringAlgorithmsTest.cpp  TestSuite.cpp  TestSuite.h  main.cpp  tests.pro  tst_solutionparsertest.cpp  tst_utilsbom.cpp
tests/TestSolutions/: Project1.sln
vs-solution-explorer/: CMakeLists.txt  SolutionTreeModel.cpp  SolutionTreeModel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vs-solution-explorer.pro  vs-solution-explorer_ru_RU.ts
vs-solution-explorer/SolutionParser/: FileSolutionSource.cpp  FileSolutionSource.h  ISolution.cpp  ISolution.h  ISolutionGlobal.cpp  ISolutionGlobal.h  ISolutionParser.cpp  ISolutionParser.h  ISolutionProject.cpp  ISolutionProject.h  ISolutionSource.cpp  ISolutionSource.h  SLN-format.md  Solution.cpp  Solution.h  SolutionGlobal.cpp  SolutionGlobal.h  SolutionParser.cpp  SolutionParser.h  SolutionProject.cpp  SolutionProject.h  SolutionProjectType.cpp  SolutionProjectType.h
vs-solution-explorer/Utils/: Bom.cpp  Bom.h  RecentValues.cpp  RecentValues.h  StringAlgorithms.cpp  StringAlgorithms.h
